# state-space-filter-comparison

./: .gitignore  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: python-tests.yml
experiments/: run_experiment.py
notebooks/: 04_aggregate_results.ipynb
src/: __init__.py  config.py
src/data/: simulate.py
src/filters/: base.py  kalman.py  particle_filter.py  robust_kf.py  student_t_kf.py
src/metrics/: scoring.py
src/utils/: plotting.py
tests/: conftest.py  test_filters.py  test_simulation.py
