[metadata]
name = state-space-filter-comparison
version = 0.1.0
description = Monte Carlo comparison of state-space filters with heavy tails

[options]
# 1) tell setuptools to look under src/ 
package_dir =
    = src
# 2) find all packages there 
packages = find:
# 3) your runtime dependencies
install_requires =
    numpy
    pandas
    matplotlib
    scipy
    pytest

[options.packages.find]
where = src